add header title navbar

--- a/index.html
+++ b/index.html
@@ -8,5 +8,16 @@
     <script src="./scripts/api.js" defer></script>
     <title>Star Wars Yearbook</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Star Wars Yearbook</h1>
+      <nav>
+        <ul>
+          <li>Home</li>
+          <li>People</li>
+        </ul>
+      </nav>
+    </header>
+    <main></main>
+  </body>
 </html>
