--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
     <title>Star Wars Yearbook</title>
   </head>
   <body>
-    <header>
-      <h1>Star Wars Yearbook</h1>
-      <nav>
-        <ul>
-          <li>Home</li>
-          <li>People</li>
+    <header class="header">
+      <h1 class="header__title">Star Wars Yearbook</h1>
+      <nav class="nav">
+        <ul class="nav__list">
+          <li class="nav__list-item">Home</li>
+          <li class="nav__list-item">People</li>
         </ul>
       </nav>
     </header>
-    <main></main>
+
+    <main>
+      <section class="card__container"></section>
+    </main>
   </body>
 </html>
