Add font-face, edit style

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </nav>
     </header>
 
-    <main>
+    <main class="main-container">
       <section class="card__container"></section>
     </main>
   </body>
