Add pictures for each characters

--- a/index.html
+++ b/index.html
@@ -20,6 +20,21 @@
     </header>
 
     <main class="main-container">
+      <section class="scroll">
+        <h1>Welome to the Star Wars Year Book</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam,
+          similique voluptatibus nobis tempore, dolorem hic ad exercitationem
+          rem temporibus quo dolore molestias obcaecati consequuntur sit
+          asperiores repudiandae beatae nesciunt quibusdam!
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo,
+          obcaecati fugiat, animi vel iste impedit quisquam nisi sunt magnam
+          veniam pariatur laboriosam voluptatem facere necessitatibus maxime
+          sequi expedita? Mollitia, corrupti!
+        </p>
+      </section>
       <section class="card__container"></section>
     </main>
   </body>
