Change styling for Card

--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
   <body>
     <header class="header">
       <h1 class="header__title">Star Wars Yearbook</h1>
-      <nav class="nav">
+      <!-- <nav class="nav">
         <ul class="nav__list">
           <li class="nav__list-item">Home</li>
           <li class="nav__list-item">People</li>
         </ul>
-      </nav>
+      </nav> -->
     </header>
 
-    <main class="main-container">
-      <section class="scroll">
+    <main class="main__container">
+      <section class="main__text">
         <h1>Welome to the Star Wars Year Book</h1>
-        <p>
+        <!-- <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam,
           similique voluptatibus nobis tempore, dolorem hic ad exercitationem
           rem temporibus quo dolore molestias obcaecati consequuntur sit
@@ -33,7 +33,7 @@
           obcaecati fugiat, animi vel iste impedit quisquam nisi sunt magnam
           veniam pariatur laboriosam voluptatem facere necessitatibus maxime
           sequi expedita? Mollitia, corrupti!
-        </p>
+        </p> -->
       </section>
       <section class="card__container"></section>
     </main>
