--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
 
     <main class="main__container">
       <section class="main__text">
-        <h1>Welome to the Star Wars Year Book</h1>
-        <!-- <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam,
-          similique voluptatibus nobis tempore, dolorem hic ad exercitationem
-          rem temporibus quo dolore molestias obcaecati consequuntur sit
-          asperiores repudiandae beatae nesciunt quibusdam!
+        <h2 class="main__title">Long time ago in a galaxy far, far away...</h2>
+        <p class="main__text-body">EPISODE X</p>
+        <p class="">A NEW CAREER</p>
+        <p class="">
+          After years of wondering, two not so very young Software Engineers
+          decided to travel across the hyperspace to land on BrainStation's
+          London office and land a job into the Tech Field.
         </p>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo,
-          obcaecati fugiat, animi vel iste impedit quisquam nisi sunt magnam
-          veniam pariatur laboriosam voluptatem facere necessitatibus maxime
-          sequi expedita? Mollitia, corrupti!
-        </p> -->
+        <p class="">
+          AAlthough it has been just 5 weeks, their project will win the
+          Hackathon challenge and secure them the jobs they are long seeking
+          for...
+        </p>
       </section>
       <section class="card__container"></section>
     </main>
