Add scrolling function

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           for...
         </p>
       </section>
-      <section class="card__container"></section>
+      <section class="card__container" id="scrollMe"></section>
     </main>
   </body>
 </html>
