--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           London office and land a job into the Tech Field.
         </p>
         <p class="">
-          AAlthough it has been just 5 weeks, their project will win the
+          Although it has been just 5 weeks, their project will win the
           Hackathon challenge and secure them the jobs they are long seeking
           for...
         </p>
