--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         <p class="main__text-body">
           After years of wondering, two not so very young Software Engineers
           decided to travel across the hyperspace to land on BrainStation's
-          London office and land a job into the Tech Field.
+          London office and get a job into the Tech Field.
         </p>
         <p class="main__text-body">
           Although it has been just 5 weeks, their project will win the
-          Hackathon challenge and secure them the jobs they are long seeking
-          for...
+          Hackathon challenge and secure them the jobs they have been long
+          seeking for...
         </p>
       </section>
       <section class="card__container" id="scrollMe"></section>
